@@ -1,3 +1,15 @@
+2005/10/15	kaffeetisch
+
+	* t/GdkX11.t, xs/GdkX11.xs: Patch from Marc Lehmann adds
+	gdk_x11_screen_supports_net_wm_hint and gdk_net_wm_supports.  Also
+	bind gdk_x11_get_server_time, gdk_x11_grab_server,
+	gdk_x11_ungrab_server, gdk_x11_get_default_screen,
+	gdk_x11_register_standard_event_type,
+	gdk_x11_window_move_to_current_desktop,
+	gdk_x11_screen_get_screen_number,
+	gdk_x11_screen_get_window_manager_name and
+	gdk_x11_screen_supports_net_wm_hint while we're at it.
+
 2005/10/13	muppetman
 
 	* MANIFEST: update with missing entries.
